[project]
name = "sglang-testing"
version = "0.0.0"
description = "Local benchmarking scripts for sglang/vllm serving"
requires-python = ">=3.9"
dependencies = [
  "aiohttp>=3.9",
  "numpy>=1.23",
  "requests>=2.31",
  "tqdm>=4.66",
  "transformers>=4.41",
]

[tool.uv]
# Using a minimal setup; run `uv sync` to create the environment.
